--- a/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj
+++ b/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h" />
+    <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
