--- a/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj.filters
+++ b/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Book.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
