--- a/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj.filters
+++ b/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="Book.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="main.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CArr.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
