--- a/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj
+++ b/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj
@@ -137,7 +137,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h" />
-    <ClInclude Include="CArr.h" />
+    <ClInclude Include="CArr.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
