--- a/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj.filters
+++ b/1. Bookshop Management System/1. Bookshop Management System/1. Bookshop Management System.vcxproj.filters
@@ -15,21 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="main이었던것.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Book.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main2.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Book.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="main.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CArr.h">
